<resources>
    <string name="app_name">RobotAltamira</string>
    <string name="pruebas_basicas">Pruebas Basicas</string>
    <string name="Ingreso_NumeroB_On_Net">Numero B On Net</string>
    <string name="Ingreso_NumeroB_Off_Net">Numero B Off Net</string>
    <string name="Ingreso_NumeroB_Internacional">Numero B Internacional</string>
    <string name="Ingreso_NumeroA">Numero A</string>
    <string name="Llamada_numero_B_ON_Net">Llamada On Net</string>
    <string name="Llamada_numero_B_Off_Net">Llamada Off Net</string>
    <string name="sms_on_off">Envio SMS</string>
    <string name="internet">Uso Internet</string>
    <string name="Boton_prueba">PRUEBAS BASICAS</string>
    <string name="boton_estado">ESTADO ABONADO</string>
    <string name="fec_inicio">Fecha Inicio</string>
    <string name="fec_fin">Fecha Fin</string>
    <string name="BtnResultadoStr">RESULTADO PRUEBAS</string>
</resources>